# efficientnet-pytorch

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  efficientnet.py  efficientnet_test.py  evaluate.py  hubconf.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py  train_imagenet.py
.github/: dependabot.yml
.github/workflows/: publish.yml  python.yml
configs/: cifar10.yaml  custom.yaml  image_folder.yaml  imagenet.yaml  imagenet_distributed.yaml  imagenet_rmsprop.yaml  mnist.yaml
efficientnet/: __init__.py  config.py  ema.py  optim.py  trainer.py  warmup.py
efficientnet/datasets/: __init__.py  cifar.py  custom.py  image_folder.py  imagenet.py  lfw.py  mnist.py
efficientnet/metrics/: __init__.py  accuracy.py  average.py  metric.py
efficientnet/models/: __init__.py  efficientnet.py
efficientnet/optim/: __init__.py  rmsprop.py
efficientnet/utils/: __init__.py  collections.py  factory.py  utils.py
src/efficientnet/: __init__.py  metric.py  trainer.py
src/efficientnet/datasets/: cifar.py  imagenet.py  mnist.py
src/efficientnet/models/: __init__.py  efficientnet.py
src/efficientnet/optim/: __init__.py  rmsprop.py
src/efficientnet/utils/: utils.py
tf_to_torch/: convert.py  efficientnet.py  efficientnet_builder.py  efficientnet_model.py  eval_ckpt_main.py  preprocessing.py  run.sh  utils.py
