[tool.poetry]
name = "efficientnet"
version = "0.2.0"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
mlconfig = "^0.2.2"
tqdm = "^4.66.3"
torchmetrics = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.3"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "W",  # pycodestyle warnings

]
ignore = ["N812"]
exclude = ["tf_to_torch/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"hubconf.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
