[project]
name            = "efficientnet"
version         = "0.2.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.12"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "mlconfig>=0.3.2",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
  "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.8",
  "ty>=0.0.26",
]

[build-system]
requires      = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select  = [
  "B",                       # flake8-bugbear
  "C",                       # flake8-comprehensions
  "E",                       # pycodestyle errors
  "F",                       # pyflakes
  "I",                       # isort
  "N",                       # pep8-naming
  "UP",                      # pyupgrade
  "W",                       # pycodestyle warnings
]
ignore  = ["N812"]
exclude = ["tf_to_torch/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"hubconf.py"  = ["F401"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true

[tool.ty.rules]
unresolved-import = "ignore"
missing-argument  = "ignore"
